--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -2,6 +2,9 @@
   min-height: 74px;
   margin-top: 45px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
+  display: flex;
+  justify-content: space-between;
+  color: white;
 }
 
 @media screen and (max-width: 900px) {
