--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@
 
 @import url(./blocks/header/header.css);
 @import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/header/__link/header__link.css);
+@import url(./blocks/header/__link/_exit/header__link_exit.css);
+@import url(./blocks/header/__profile/header___profile.css);
 
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile/__avatar/profile__avatar.css);
@@ -18,6 +21,7 @@
 @import url(./blocks/avatar/avatar.css);
 
 @import url(./blocks/main/main.css);
+@import url(./blocks/main/_form/main_form.css);
 
 @import url(./blocks/cards/cards.css);
 
@@ -49,3 +53,16 @@
 @import url(./blocks/popup/__overlay/popup__overlay.css);
 @import url(./blocks/popup/__save/_inactive/popup__save_inactive.css);
 @import url(./blocks/popup/__overlay/_image/popup__overlay_image.css);
+
+@import url(./blocks/form/form.css);
+@import url(./blocks/form/__title/form__title.css);
+@import url(./blocks/form/__input/form__input.css);
+@import url(./blocks/form/__button/form__button.css);
+@import url(./blocks/form/__link/form__link.css);
+
+@import url(./blocks/tooltip/tooltip.css);
+@import url(./blocks/tooltip/__container/tooltip__container.css);
+@import url(./blocks/tooltip/__close/tooltip__close.css);
+@import url(./blocks/tooltip/__image/tooltip__image.css);
+@import url(./blocks/tooltip/__overlay/tooltip__overlay.css);
+@import url(./blocks/tooltip/__title/tooltip__title.css);
