--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 @import url(./blocks/header/__link/header__link.css);
 @import url(./blocks/header/__link/_exit/header__link_exit.css);
 @import url(./blocks/header/__profile/header___profile.css);
+@import url(./blocks/header/__email/header__email.css);
 
 @import url(./blocks/profile/profile.css);
 @import url(./blocks/profile/__avatar/profile__avatar.css);
