--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -1,25 +1,3 @@
-@keyframes modal-window-animation {
-  0% {
-    opacity: 0;
-  }
-  25% {
-    opacity: 0.25;
-  }
-
-  50% {
-    opacity: 0.5;
-  }
-
-  75% {
-    opacity: 0.75;
-  }
-
-  100% {
-    opacity: 1;
-  }
-}
-
-
 .popup {
   display: flex;
   top: 0;
@@ -27,7 +5,9 @@
   left: 0;
   right: 0;
   position: fixed;
-  animation: modal-window-animation 0.3s linear;
+  visibility: hidden;
+  transition: visibility 0.5s, opacity 0.2s linear;
+  opacity: 0;
   justify-content: center;
   align-items: center;
 }
