--- a/src/index.css
+++ b/src/index.css
@@ -67,3 +67,4 @@
 @import url(./blocks/tooltip/__image/tooltip__image.css);
 @import url(./blocks/tooltip/__overlay/tooltip__overlay.css);
 @import url(./blocks/tooltip/__title/tooltip__title.css);
+@import url(./blocks/tooltip/_active/tooltip_active.css);
